Parola Yöneticisi Kategori Ekleme ve Silme Özelliği Eklendi

--- a/Views/Modules/PasswordEntryDialog.xaml
+++ b/Views/Modules/PasswordEntryDialog.xaml
@@ -24,15 +24,18 @@
         <TextBox x:Name="TxtUsername" Grid.Row="1" Margin="100,5,0,5"/>
 
         <TextBlock Grid.Row="2" Text="Parola:" Margin="0,5"/>
-        <Grid Grid.Row="2" Margin="100,5,0,5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <PasswordBox x:Name="TxtPassword" Grid.Column="0"/>
-            <Button x:Name="BtnGeneratePassword" Content="🔁 Oluştur" Grid.Column="1" 
-                    Click="BtnGeneratePassword_Click" Margin="5,0,0,0"/>
-        </Grid>
+            <Grid Grid.Row="2" Margin="100,5,0,5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <PasswordBox x:Name="TxtPassword" Grid.Column="0" Visibility="Visible"/>
+                <TextBox x:Name="TxtPasswordVisible" Grid.Column="0" Visibility="Collapsed"/>
+            <CheckBox x:Name="ChkShowPassword" Grid.Column="1" VerticalAlignment="Top" Margin="5,0,0,0" Content="Parolayı Göster" Checked="ChkShowPassword_Checked" Unchecked="ChkShowPassword_Unchecked"/>
+            <Button x:Name="BtnGeneratePassword" Content="🔁 Oluştur" Grid.Column="2" 
+                        Click="BtnGeneratePassword_Click" Margin="5,0,0,0"/>
+            </Grid>           
 
         <TextBlock Grid.Row="3" Text="URL:" Margin="0,5"/>
         <TextBox x:Name="TxtUrl" Grid.Row="3" Margin="100,5,0,5"/>
