--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -175,12 +175,12 @@
                             </StackPanel>
                         </Button>
 
-                        <!--<Button Style="{StaticResource MenuButton}" Click="MenuButton_Click" Tag="FileManager">
+                        <Button Style="{StaticResource MenuButton}" Click="MenuButton_Click" Tag="FileManager">
                             <StackPanel Orientation="Horizontal">
                                 <iconPacks:PackIconModern Kind="Folder" Width="20" Height="20" Margin="0,0,15,0"/>
                                 <TextBlock Text="Dosya Yöneticisi" VerticalAlignment="Center"/>
                             </StackPanel>
-                        </Button>-->
+                        </Button>
 
                         <Button Style="{StaticResource MenuButton}" Click="MenuButton_Click" Tag="DataAnalysis">
                             <StackPanel Orientation="Horizontal">
